# thread_homework

./: .gitignore
sumVector/: CMakeLists.txt  main.cpp
thread/: CMakeLists.txt  main.cpp
